# atonixcorp

./: .env  .env.example  .env.gpg  .gitignore  .gitlab-ci.yml  APACHE2_GUIDE.md  APACHE2_SETUP_SUMMARY.md  ARCHITECTURE.md  ATONIXCORP_HOMEPAGE.md  CLOUD_PLATFORM_BRAND_GUIDELINES.md  CLOUD_PLATFORM_HOMEPAGE.md  CLOUD_PLATFORM_REBRANDING_SUMMARY.md  COMPLETE_INFRASTRUCTURE.md  DEPLOYMENT.md  DOCKER_SETUP.md  DOCKER_SETUP_COMPLETE.md  Dockerfile.production  ENTERPRISE_SECURITY_DASHBOARD_COMPLETE.md  ENTERPRISE_SECURITY_DELIVERY_COMPLETE.md  ENTERPRISE_SECURITY_DELIVERY_SUMMARY.txt  ENTERPRISE_SECURITY_SUMMARY.txt  FRONTEND_SECURITY_SETUP.md  FRONTEND_STATUS_COMPLETE.md  FRONTEND_STYLING_ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  Jenkinsfile  LAUNCH_GUIDE.md  PLATFORM_COMPLETE.md  PRODUCTION-DEPLOYMENT.md  QUICKSTART.md  README.md  REGISTRY-PUSH.md  SECURITY.md  SECURITY_CHECKLIST.md  SECURITY_DASHBOARD_FINAL_STATUS.md  SECURITY_IMPLEMENTATION.md  TROUBLESHOOTING.md  _config.yml  about.html  (+36 more)
.circleci/: config.yml
ansible/: README.md
atonix-hardware-integration/: README.md
atonixcorp-operator/: Makefile  PROJECT  README.md  go.mod
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  asgi.py  clouds.yaml  clouds.yaml.example  db.sqlite3  pytest.ini  requirements.txt  start.sh  urls.py
docker/: Dockerfile.apache2  apache-spark.conf  docker-compose.spark.yml  docker-compose.spark.yml.broken  nginx-production-platform.conf  nginx-production.conf  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/atonixcorp_sdk/: cli.py  client.py
(+1122 files in other folders)
