[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atonixcorp-sdk"
version = "0.1.0"
description = "Official Python SDK and CLI for AtonixCorp"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
atonixctl = "atonixcorp_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["atonixcorp_sdk*"]
